--- a/index.html
+++ b/index.html
@@ -1,15 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>The Quiz</title>
+    
     <link rel="stylesheet" href="styles.css">
+
     <link rel="icon" href="favicon.png">
+    <script src="https://kit.fontawesome.com/4190d2f4c9.js" crossorigin="anonymous"></script>
+
 </head>
+
 <body>
-    <h1>The Quiz</h1>
-    <script src="script.js"></script>
+
+    <div class="start-btn hidden">
+        <button>Start Quiz</button>
+    </div>
+
+    <div class="info-box">
+
+        <div class="info-title">
+            <span>Rules of this Quiz</span>
+        </div>
+
+        <div class="info-list">
+            <div class="info">1. You will get only 15 seconds per Question</div>
+            <div class="info">2. Once you select the Answer, You can't reselect them</div>
+            <div class="info">3. You can't select any Option once time goes off</div>
+            <div class="info">4. You can't exit the Quiz while Playing</div>
+            <div class="info">5. You'll get points on the basis of your Correct Answers</div>
+        </div>
+
+        <div class="buttons">
+            <button class="quit">Exit</button>
+            <button class="restart">Continue</button>
+        </div>
+
+    </div>
+
 </body>
+
 </html>
