--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
 
-    <div class="start-btn">
+    <div class="start-btn hidden">
         <button>Start Quiz</button>
     </div>
 
@@ -44,13 +44,13 @@
 
     </div>
 
-    <div class="quiz-box hidden">
+    <div class="quiz-box">
 
         <header>
 
             <div class="title">The Quiz.</div>
             <div class="timer">
-                <span> Time Left : <span> &nbsp; 15 s &nbsp;</span> </span>
+                <span> Time Left : &nbsp; <span> &nbsp; 15 s &nbsp;</span> </span>
             </div>
             
         </header>
@@ -65,29 +65,29 @@
 
             <div class="option-list">
 
-                <div class="option">
+                <div class="option incorrect">
                     <span>
-                        1. Hyper Text Preprocessor
+                        Hyper Text Preprocessor
                     </span>
                     <div class="icon cross"><i class="fas fa-times"></i></div>
                 </div>
 
-                <div class="option">
+                <div class="option correct">
                     <span>
-                        2. Hyper Text Markup Language
+                        Hyper Text Markup Language
                     </span>
                     <div class="icon tick"><i class="fas fa-check"></i></div>
                 </div>
 
                 <div class="option">
                     <span>
-                        3. Hyper Text Multiple Language
+                        Hyper Text Multiple Language
                     </span>
                 </div>
 
                 <div class="option">
                     <span>
-                        4. Hyper Tool Markup Language
+                        Hyper Tool Markup Language
                     </span>
                 </div>
 
