--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
 
-    <div class="start-btn">
+    <div class="start-btn hidden">
         <button>Start Quiz</button>
     </div>
 
@@ -44,7 +44,7 @@
 
     </div>
 
-    <div class="quiz-box hidden">
+    <div class="quiz-box">
 
         <header>
 
@@ -59,33 +59,28 @@
 
             <div class="que-text">
                 <span>
-                    What does HTML stand for?
                 </span>
             </div>
 
             <div class="option-list">
 
-                <div class="option">
+                <div class="option option_1">
                     <span>
-                        Hyper Text Preprocessor
                     </span>
                 </div>
 
-                <div class="option">
+                <div class="option option_2">
                     <span>
-                        Hyper Text Markup Language
                     </span>
                 </div>
 
-                <div class="option">
+                <div class="option option_3">
                     <span>
-                        Hyper Text Multiple Language
                     </span>
                 </div>
 
-                <div class="option">
+                <div class="option option_4">
                     <span>
-                        Hyper Tool Markup Language
                     </span>
                 </div>
 
@@ -130,6 +125,7 @@
     </div>
 
     <script src="script.js"></script>
+    <script src="questions.js"></script>
 
 </body>
 
