--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
 
         <div class="info-list">
             <div class="info">1. You will get a total of 10 Questions</div>
-            <div class="info">2. The Questions will be General Knowledge Based</div>
+            <div class="info">2. The Questions will be Geography Based</div>
             <div class="info">3. You will get only 15 seconds per Question</div>
             <div class="info">4. Once you select the Answer, You can't reselect them</div>
-            <div class="info">5. You can't select any Option once time goes off</div>
-            <div class="info">6. You'll get 1 Point for every Correct Answer</div>
+            <div class="info">5. You'll get 5 Points for every Correct Answer</div>
+            <div class="info">6. You'll get -1 Points for every InCorrect Answer</div>
+            <div class="info">7. You'll get 0 Points for UnAnswered Questions</div>
         </div>
 
         <div class="buttons">
