--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
 
-    <div class="start-btn hidden">
+    <div class="start-btn">
         <button>Start Quiz</button>
     </div>
 
@@ -45,7 +45,7 @@
 
     </div>
 
-    <div class="quiz-box">
+    <div class="quiz-box hidden">
 
         <header>
 
